--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar">
+            <h1>Dashboard</h1>
+            <ul class="navigation">
+                <li><img src="./icons/home.png" alt=""> Home</li>
+                <li><img src="./icons/face-man-profile.png" alt=""> Profile</li>
+                <li><img src="./icons/forum.png" alt=""> Messages</li>
+                <li><img src="./icons/history.png" alt=""> History</li>
+                <li><img src="./icons/calendar-check.png" alt=""> Tasks</li>
+                <li><img src="./icons/account-group.png" alt=""> Communities</li>
+            </ul>
+            <ul class="help">
+                <li><img src="./icons/cog.png" alt=""> Settings</li>
+                <li><img src="./icons/face-agent.png" alt=""> Support</li>
+                <li><img src="./icons/shield-key.png" alt=""> Privacy</li>
+            </ul>
+        </div>
+        <div class="header">
+            a
+        </div>
+        <div class="content">
+            a
+        </div>
+    </div>
 </body>
 </html>
