added and styled header content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,26 @@
             </ul>
         </div>
         <div class="header">
-            a
+            <div class="search">
+                <img src="./icons/magnify.png" alt="search">
+                <input type="text">
+                <div class="user">
+                    <img src="./icons/bell-ring.png" alt="">
+                    <img class="userProfile" src="./icons/user.png" alt="">
+                    <p>john Mctavish</p>
+                </div>
+            </div>
+            <div class="action">
+                <img class="userProfile big" src="./icons/user.png" alt="">
+                <div class="name">
+                    <p class="greeting">Hi There!</p>
+                    <p class="signature">John Mctavish (@Johnmctavish)</p>
+                </div>
+                <button class="actionButton">New</button>
+                <button class="actionButton">Upload</button>
+                <button class="actionButton">Share</button>
+
+            </div>
         </div>
         <div class="content">
             a
