added main content markup and style

--- a/index.html
+++ b/index.html
@@ -48,7 +48,117 @@
             </div>
         </div>
         <div class="content">
-            a
+            <div class="projects">
+                <p class="contentParagraph">Your Projects</p>
+                <div class="projectCards">
+                    <div class="card">
+                        <p class="cardHeading">Really Cool Project</p>
+                        <p class="cardDescription">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis</p>
+                        <div class="cardIcons">
+                            <img src="./icons/bookmark-outline.png" alt="">
+                            <img src="./icons/eye-plus-outline.png" alt="">
+                            <img src="./icons/share-variant.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="cardHeading">Another One</p>
+                        <p class="cardDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <div class="cardIcons">
+                            <img src="./icons/bookmark-outline.png" alt="">
+                            <img src="./icons/eye-plus-outline.png" alt="">
+                            <img src="./icons/share-variant.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="cardHeading">Interesting One</p>
+                        <p class="cardDescription">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis</p>
+                        <div class="cardIcons">
+                            <img src="./icons/bookmark-outline.png" alt="">
+                            <img src="./icons/eye-plus-outline.png" alt="">
+                            <img src="./icons/share-variant.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="cardHeading">Impossible app</p>
+                        <p class="cardDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <div class="cardIcons">
+                            <img src="./icons/bookmark-outline.png" alt="">
+                            <img src="./icons/eye-plus-outline.png" alt="">
+                            <img src="./icons/share-variant.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="cardHeading">Impossible Project</p>
+                        <p class="cardDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <div class="cardIcons">
+                            <img src="./icons/bookmark-outline.png" alt="">
+                            <img src="./icons/eye-plus-outline.png" alt="">
+                            <img src="./icons/share-variant.png" alt="">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <p class="cardHeading">Mega Cool Project</p>
+                        <p class="cardDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <div class="cardIcons">
+                            <img src="./icons/bookmark-outline.png" alt="">
+                            <img src="./icons/eye-plus-outline.png" alt="">
+                            <img src="./icons/share-variant.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="feed">
+                <div class="announcement">
+                    <p class="contentParagraph">Announcement</p>
+                    <div class="announcementPanel">
+                        <div class="anonce bordered">
+                            <p class="anonceHeading">Site Maintenance</p>
+                            <p class="anonceText">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totremam  aperiam, eaque ipsa quae ab illo inventore</p>
+                        </div>
+                        <div class="anonce bordered">
+                            <p class="anonceHeading">Community Share Day</p>
+                            <p class="anonceText">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totremam  aperiam, eaque ipsa quae ab illo inventore</p>
+                        </div>
+                        <div class="anonce">
+                            <p class="anonceHeading">Update Privacy Policy</p>
+                            <p class="anonceText">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totremam  aperiam, eaque ipsa quae ab illo inventore</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="trending">
+                    <p class="contentParagraph">Trending</p>
+                    <div class="trendingPanel">
+                        <div class="trend">
+                            <img src="./icons/rice-bowl.png" alt="">
+                            <div class="trendSignature">
+                                <p class="trendSign">@mrrice</p>
+                                <p class="trendDesc">World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <img src="./icons/meat-bun.png" alt="">
+                            <div class="trendSignature">
+                                <p class="trendSign">@meaty</p>
+                                <p class="trendDesc">Happiest Of Them All</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <img src="./icons/shaved-ice.png" alt="">
+                            <div class="trendSignature">
+                                <p class="trendSign">@iccy</p>
+                                <p class="trendDesc">Coolest Ever</p>
+                            </div>
+                        </div>
+                        <div class="trend">
+                            <img src="./icons/tobiko.png" alt="">
+                            <div class="trendSignature">
+                                <p class="trendSign">@tobiko</p>
+                                <p class="trendDesc">Life Changing</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
